<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="parent">

        <Button
            android:id="@+id/next_button"
            style="@android:style/Widget.Material.Button.Borderless.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:background="?selectableItemBackgroundBorderless"
            android:text="@string/siguiente"
            android:onClick="summit" />
    </FrameLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/frameLayout"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <EditText
                android:id="@+id/editTextTextPersonName"
                style="@style/InputTextStyle"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="16dp"
                android:layout_marginHorizontal="16dp"
                android:layout_marginBottom="16dp"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/hint_name"
                android:inputType="textPersonName|textCapWords"
                tools:text="@tools:sample/full_names"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:alpha="0.7"
                android:gravity="center_horizontal"
                android:text="@string/fecha"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

            <DatePicker
                android:id="@+id/date"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginHorizontal="16dp"
                android:layout_weight="3"
                android:calendarViewShown="false"
                android:datePickerMode="spinner" />

            <EditText
                android:id="@+id/editTextPhone"
                style="@style/InputTextStyle"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginHorizontal="16dp"
                android:layout_marginBottom="16dp"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/hint_phone"
                android:inputType="phone" />

            <EditText
                android:id="@+id/editTextTextEmailAddress"
                style="@style/InputTextStyle"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginHorizontal="16dp"
                android:layout_marginBottom="16dp"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/hint_email"
                android:inputType="textEmailAddress" />

            <EditText
                android:id="@+id/editTextTextMultiLine"
                style="@style/InputTextStyle"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginHorizontal="16dp"
                android:layout_marginBottom="16dp"
                android:layout_weight="2"
                android:gravity="start|top"
                android:hint="@string/hint_description"
                android:imeOptions="actionDone"
                android:inputType="textMultiLine" />

        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>